RESOLVED FIXED186011
iOS WK1: Occasional crash in sanitizedMarkupForFragmentInDocument
https://bugs.webkit.org/show_bug.cgi?id=186011
Summary iOS WK1: Occasional crash in sanitizedMarkupForFragmentInDocument
Ryosuke Niwa
Reported 2018-05-26 00:17:22 PDT
We're seeing an occasional crash inside appendChild in sanitizedMarkupForFragmentInDocument.
Attachments
Fixes the bug (5.41 KB, patch)
2018-05-26 01:55 PDT, Ryosuke Niwa
no flags
Ryosuke Niwa
Comment 1 2018-05-26 01:55:39 PDT
Created attachment 341392 [details] Fixes the bug
Ryosuke Niwa
Comment 2 2018-05-26 01:57:29 PDT
Alexey Proskuryakov
Comment 3 2018-05-26 12:12:09 PDT
Interesting! When what the yielding added? It would seem that it may be required for responsiveness. Perhaps we don’t care about WK1 responsiveness any more though.
Ryosuke Niwa
Comment 4 2018-05-29 12:53:14 PDT
(In reply to Alexey Proskuryakov from comment #3) > Interesting! > > When what the yielding added? It would seem that it may be required for > responsiveness. Perhaps we don’t care about WK1 responsiveness any more > though. Well, we're creating an empty document here, and we're in the middle of trying to paste a content, which is a sync API so we can't really yield.
David Kilzer (:ddkilzer)
Comment 5 2018-05-29 12:54:58 PDT
Comment on attachment 341392 [details] Fixes the bug r=me
WebKit Commit Bot
Comment 6 2018-05-29 13:30:23 PDT
Comment on attachment 341392 [details] Fixes the bug Clearing flags on attachment: 341392 Committed r232272: <https://trac.webkit.org/changeset/232272>
WebKit Commit Bot
Comment 7 2018-05-29 13:30:25 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.